--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .aaa img {
     width: 100%;
 }
-.aaa .more_inf {
+.aaa .aaa__more-inf {
     font-family: fantasy, cursive;
 }
 
@@ -26,12 +26,12 @@ body {
     width: 500px;
     margin: 0 auto 0;
 }
-.task {
+.centered-main-page-element__task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
+.centered-main-page-element__task-row-wrapper {
     display: flex;
 }
 ul {
@@ -138,11 +138,11 @@ ul li input[type=text] {
     display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.centered-main-page-element__editMode input[type=text] {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+ul li.centered-main-page-element__editMode label {
     display:none;
 }
