--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.wrapper {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
     display: block;
     text-align: right;
 }
-.matrix img {
+.matrix__img {
     width: 100%;
 }
 .matrix .matrix__more-inf {
@@ -21,30 +21,40 @@ body {
 .matrix { text-align: center;
 }
 }
-.main-page {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
-.main-page__task {
+.main__label-task,
+.main__input-task,
+.main__input-new-task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
-.main-page__new-task-wrapper {
+.main__new-task-wrapper {
     display: flex;
 }
-ul {
+
+.main__task-list {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+
+.main__task,
+.main__heading {
     list-style:none;
 }
-input,button{
+
+.button,
+.main__input-task,
+.main__input-new-task,
+.main__checkbox{
     outline:none;
 }
-button {
+
+.button {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +63,13 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+
+.button:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.main__heading,
+.main__heading-new-task {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +78,8 @@ label[for="new-task"] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.main__input-task,
+.main__input-new-task {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,21 +91,22 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.main__input-task:focus,
+.main__input-new-task:focus {
     color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.main__heading-new-task {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+.main__input-new-task {
     width: 318px;
 }
 
 /* Task list */
-li {
+.main__task {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,47 +115,47 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.main__task > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.main__checkbox {
     margin: 0 10px;
 }
-li > label {
+.main__label-task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.main__input-task {
     width: 226px
 }
-button.delete img {
+.delete__img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete__img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-label {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.main__input-task {
     display:none
 }
 
-ul li.main-page__editMode input[type=text] {
+.input-edit {
     display:inline-block;
     width:224px
 }
 
-ul li.main-page__editMode label {
+.label-edit {
     display:none;
 }
