--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .main__input-new-task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .main__new-task-wrapper {
@@ -136,7 +136,7 @@
 }
 
 .main__input-task {
-  width: 226px
+  width: 226px;
 }
 
 .delete__img {
@@ -151,18 +151,18 @@
 
 /* Completed */
 .completed-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .main__input-task {
-  display: none
+  display: none;
 }
 
 .input-edit {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .label-edit {
