refactor: add indention according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 .button,
 .main__input-task,
 .main__input-new-task,
-.main__checkbox{
+.main__checkbox {
   outline: none;
 }
 
@@ -156,17 +156,14 @@
 }
 
 /* Edit Task */
-.main__input-task {
+.main__input-task,
+.label-edit {
   display: none;
 }
 
 .input-edit {
   display: inline-block;
   width: 224px;
-}
-
-.label-edit {
-  display: none;
 }
 
 @media (max-width:768px) {
