--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 .matrix__img {
   width: 100%;
+  margin: 0 0 -3px 0;
 }
 
 .matrix .matrix__more-inf {
@@ -32,6 +33,10 @@
   width: 56%;
   display: inline-block;
   flex-grow: 1;
+}
+
+.add-item {
+  padding: 16px 0 16px 0;
 }
 
 .add-item__wrapper {
@@ -76,7 +81,7 @@
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
-  padding: 43px 0 10px;
+  padding: 30px 0 10px;
   margin: 0;
   text-transform: uppercase;
 }
@@ -113,7 +118,7 @@
 /* Task list */
 .items__task {
   overflow: hidden;
-  padding: 20px 0;
+  padding: 18.5px 0;
   border-bottom: 1px solid #eee;
   display: flex;
   justify-content: space-between;
