--- a/style.css
+++ b/style.css
@@ -1,161 +1,176 @@
 /* Basic Style */
 .wrapper {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
-}
-.matrix {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
-}
-.matrix__img {
-    width: 100%;
-}
-.matrix .matrix__more-inf {
-    font-family: fantasy, cursive;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
 
-@media (max-width:768px) {
-.matrix { text-align: center;
+.matrix {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
+
+.matrix__img {
+  width: 100%;
 }
+
+.matrix .matrix__more-inf {
+  font-family: fantasy, cursive;
+}
+
 .main {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
+
 .main__label-task,
 .main__input-task,
 .main__input-new-task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
 }
+
 .main__new-task-wrapper {
-    display: flex;
+  display: flex;
 }
 
 .main__task-list {
-    margin:0;
-    padding: 0px;
+  margin:0;
+  padding: 0px;
 }
 
 .main__task,
 .main__heading {
-    list-style:none;
+  list-style:none;
 }
 
 .button,
 .main__input-task,
 .main__input-new-task,
 .main__checkbox{
-    outline:none;
+  outline:none;
 }
 
 .button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 
 .button:hover {
-    color: #3a3A3a;
+  color: #3a3A3a;
 }
+
 /* Heading */
 .main__heading,
 .main__heading-new-task {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
+
 .main__input-task,
 .main__input-new-task {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
 }
+
 .main__input-task:focus,
 .main__input-new-task:focus {
-    color: #333;
+  color: #333;
 }
 
 /* New Task */
 .main__heading-new-task {
-    display: block;
-    margin: 0 0 20px;
+  display: block;
+  margin: 0 0 20px;
 }
+
 .main__input-new-task {
-    width: 318px;
+  width: 318px;
 }
 
 /* Task list */
 .main__task {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 .main__task > * {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .main__checkbox {
-    margin: 0 10px;
+  margin: 0 10px;
 }
+
 .main__label-task {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
+
 .main__input-task {
-    width: 226px
+  width: 226px
 }
+
 .delete__img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
+
 .delete__img:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 .completed-label {
-    text-decoration: line-through
-    color: #888;
+  text-decoration: line-through
+  color: #888;
 }
 
 /* Edit Task */
 .main__input-task {
-    display:none
+  display:none
 }
 
 .input-edit {
-    display:inline-block;
-    width:224px
+  display:inline-block;
+  width:224px
 }
 
 .label-edit {
-    display:none;
+  display:none;
+}
+
+@media (max-width:768px) {
+.matrix { 
+text-align: center;
+}  
 }
