--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@
   margin: 0 auto;
   display: block;
   text-align: right;
+  padding-bottom: 16px;
 }
 
 .matrix__img {
   width: 100%;
+  margin: 0 0 -3px 0;
 }
 
 .matrix .matrix__more-inf {
@@ -36,6 +38,7 @@
 
 .add-item__wrapper {
   display: flex;
+  padding-bottom: 16px;
 }
 
 .items__task-list {
@@ -76,7 +79,7 @@
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
-  padding: 43px 0 10px;
+  padding: 30px 0 10px;
   margin: 0;
   text-transform: uppercase;
 }
@@ -113,7 +116,7 @@
 /* Task list */
 .items__task {
   overflow: hidden;
-  padding: 20px 0;
+  padding: 18.5px 0;
   border-bottom: 1px solid #eee;
   display: flex;
   justify-content: space-between;
